--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@
 * {
     color: black;
     position: static;
+    margin: auto;
 }
 
 h1, h2, h3, p, div, li {
@@ -52,7 +53,10 @@ form + nav {
 #grid div {
     
     height: 40px;
-    border: 0.1em solid black;
+    border-style: solid;
+    border-width: 0.1em;
+    border-color: black;
+
 }
 
 h1, h2 {
